Update email address in configuration file

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ github:
 
 social:
   name: IshikawaUta
-  email: example@domain.com # Ganti dengan emailmu jika ingin ditampilkan
+  email: komikers09@gmail.com # Ganti dengan emailmu jika ingin ditampilkan
   links:
     - https://github.com/IshikawaUta
     # - https://twitter.com/username 
