Update blog title in configuration file

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # The Site Configuration
 # Identitas Utama
-title: IshikawaUta Blog
+title: IshikawaUta
 tagline: Catatan harian dan tutorial teknis.
 description: >-
   Blog pribadi IshikawaUta yang dibangun menggunakan Jekyll dan tema Chirpy.
